# nettest

./: Cargo.toml
server/: Cargo.toml
src/: main.rs  ping.rs  quicdownload.rs  tcpupload.rs
