[package]
name = "nettest"
version = "0.2.1"
authors = ["openmynet <openmynet@gmail.com>"]
edition = "2018"

[dependencies]
rand_xoshiro = "0.6.0"
log = "0.4"
anyhow = "1"
clap = { version = "3.1.18", features = ["derive"] }
quiche = { version = "0.14" }
socket2 = "0.4.4"

[dependencies.rand]
version = "0.8.5"
default-features = false
features = ["getrandom"]

[workspace]
members = [".", "server"]
